DevAccount/src/objects/hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>hierarchy</relationshipLabel>
        <relationshipName>hierarchy_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; AccountId__c ,  accountname__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountname__c</fullName>
        <formula>AccountId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>accountname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent_hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>parent hierarchy</label>
        <referenceTo>hierarchy__c</referenceTo>
        <relationshipLabel>hierarchy</relationshipLabel>
        <relationshipName>hierarchy</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>hierarchy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>